feat: sldie anh

--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -8,19 +8,18 @@
     <script src="index.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <!-- <img id="slide" src="" alt="" style="height:500px;">
+<body onload="hienThi()">
+    <img id="slide" src="" alt="" style="height:500px;">
     <br>
     <button onclick="previous()">Previous</button>
     <button onclick="play()">Play</button>
     <button onclick="stop()">Stop</button>
-    <button onclick="next()">Next</button> -->
+    <button onclick="next()">Next</button>
     <!-- <div id="red"></div>
     <div id="yellow"></div>
     <div id="green"></div>
     <div id="grey"></div>
     <div id="pink"></div>
     <div id="black"></div> -->
-    <img id="image" src="1920x1080-23689-A.C.-MilanPaolo-Maldini-HD-Wallpaper.png" alt="">
 </body>
 </html>
