feat: upload file and geolocation

--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -14,6 +14,11 @@
         <input type="text" required name="username">
         <p id="errorName" class="error"></p>
         <br>
+        <label>Avatar</label>
+        <input type="file" name="avatar" multiple onchange="uploadFiles(this.files)">
+        <img id="avatar" src="" alt="" style="width: 300px;">
+        <p id="errorName" class="error"></p>
+        <br>
         <label for="oldPass">Mật khẩu cũ</label>
         <input type="password" required name="oldPass">
         <p id="errorOldPass" class="error"></p>
@@ -25,6 +30,9 @@
         <label for="confirmNewPass">Xác nhận mật khẩu mới</label>
         <input type="password" required name="confirmNewPass" onblur="checkConfirmPassword()">
         <p id="errorConfirmPass" class="error"></p>
+        <br>
+        <input type="button" onclick="dinhVi()" value="Vị trí">
+        <p id="location"></p>
         <br>
         <input type="button" onclick="newFunction()" value="Đổi mật khẩu">
     </form>
